[package]
name = "hyper-tls"
version = "0.5.0" # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"
edition = "2018"

[features]
default = ["tokio-native-tls"]
vendored = ["native-tls/vendored"]
rustls = ["tokio-rustls", "rustls-native-certs"]
rustls-webpki-rools = ["webpki-roots"]

[dependencies]
bytes = "1"
native-tls = "0.2.1"
hyper = { version = "0.14.2", default-features = false, features = ["tcp", "client"] }
tokio = "1"
tokio-rustls = { version = "0.23", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rustls-native-certs = { version = "0.6.1", optional = true }
webpki-roots = { version = "0.22.2", optional = true }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["io-std", "macros", "io-util"] }
hyper = { version = "0.14.2", default-features = false, features = ["http1"] }
