[package]
name = "hyper-tls"
version = "0.5.0" # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"
edition = "2018"

[features]
vendored = ["native-tls/vendored"]

[dependencies]
bytes = "1"
native-tls = "0.2.1"
hyper = { version = "1.0.0-rc.4", default-features = false }
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "client",
], rev = "11776bd742196691d03203caa0f4acd29df696bd" }
tokio = "1"
tokio-native-tls = "0.3"
tower-service = "0.3"
http-body-util = "0.1.0-rc.3"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["io-std", "macros", "io-util"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "http1",
], rev = "11776bd742196691d03203caa0f4acd29df696bd" }
